--- a/assignment-w5.csproj
+++ b/assignment-w5.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
-
+<PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.1.1" />
         <PackageReference Include="FluentAssertions" Version="5.4.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.3" />
@@ -23,5 +23,10 @@
 
     <PackageReference Include="NSubstitute" Version="3.1.0" />
   </ItemGroup>
+
+    <ItemGroup>
+  <None Update="loyalty.db" CopyToOutputDirectory="Always" />
+  <None Update="test.db" CopyToOutputDirectory="Always" />
+</ItemGroup>
 
 </Project>
